gcc/testsuite/rust/rustc/ui/rfcs/rfc-2457-non-ascii-idents/crate_name_nonascii_forbidden.rs
extern crate ьаг; // { dg-error "" "" { target *-*-* } }

fn main() {}

